nginx/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deploy-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-deploy
  template:
    metadata:
      labels:
        app: web-deploy
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
