nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-test
spec:
  selector:
    app: web-deploy
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
